buy, 404, index changes

--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/hippo_background.jpg" />
+    <link rel="icon" href="/hippo_background.jpg" />
+    <meta
+      property="og:title"
+      content="Shady Hippo – The Ultimate Meme Coin with Attitude"
+    />
+    <meta
+      property="og:description"
+      content="Shady Hippo is the next-generation meme coin that blends humor, community, and blockchain utility with a touch of mystery."
+    />
+    <meta
+      property="og:image"
+      content="https://shadyhippo.fun/hippo_background.jpg"
+    />
+    <meta property="og:url" content="https://shadyhippo.fun" />
+    <meta property="og:type" content="website" />
+    <!--  -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Shady Hippo – The Ultimate Meme Coin with Attitude"
+    />
+    <meta
+      name="twitter:description"
+      content="Shady Hippo is the next-generation meme coin that blends humor, community, and blockchain utility with a touch of mystery."
+    />
+    <meta
+      name="twitter:image"
+      content="https://shadyhippo.fun/hippo_background.jpg"
+    />
+    <meta name="twitter:site" content="@hippo_shady" />
+    <!--  -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Shady Hippo is the next-generation meme coin that blends humor, community, and blockchain utility with a touch of mystery."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="/hippo_background.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,23 +55,56 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Shady Hippo – The Ultimate Meme Coin with Attitude</title>
+    <meta
+      name="keywords"
+      content="Shady Hippo, Meme Coin, Crypto, Blockchain, Humor, Community, Mystery"
+    />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
       rel="stylesheet"
     />
+    <style>
+      /* Preloader Styles */
+      #preloader {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: #ffffff;
+        z-index: 9999;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .spinner {
+        border: 4px solid #f3f3f3;
+        border-top: 4px solid #6f42c1;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 1s linear infinite;
+      }
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      }
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="preloader">
+      <div class="spinner"></div>
+    </div>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      window.addEventListener("load", function () {
+        const preloader = document.getElementById("preloader");
+        preloader.style.display = "none";
+      });
+    </script>
   </body>
 </html>
